refactor coin package
